--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,6 @@ header.topbar {
     font-weight: 600;
 }
 
-#horizontal-menu {
-}
 
 .horizontal-menu-root {
     display:flex;
@@ -255,17 +253,11 @@ iframe {
     color:#00c5c5
 }
 
-.price-reference {
-   
-}
 
 .price-reference-number {
    color: #ffd900;
 }
 
-.price-cell {
-   
-}
 
 .price-cell-number {
     color: #ff25ff;
@@ -295,7 +287,7 @@ iframe {
     position: relative;
 }
 
-.history .volume-percent {
+.history .volume-percent-buy {
     position: absolute;
     top: 0;
     right:0;
@@ -303,7 +295,15 @@ iframe {
     height: 100%;
     background: rgba(247, 148, 29, 0.2);
 }
-  
+
+.history .volume-percent-sell {
+    position: absolute;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background: rgba(247, 148, 29, 0.2);
+}
 
 .watchlist {
     background: #2f3240;
@@ -347,6 +347,10 @@ thead {
 
 .txt-green {
     color: #0f0;
+}
+
+.txt-purple {
+    color: #ff25ff;
 }
 
 #col3 {
